# i2c-mqtt-gateway

./: Cargo.toml  LICENSE  Makefile
.github/workflows/: rust.yml
config/: config.yaml
src/: config.rs  homeassistant.rs  i2c.rs  main.rs  util.rs
