[package]
name = "i2c-mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4"
rumqttc = "0.24.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
i2cdev = "0.6.1"

[[bin]]
name = "i2c-mqtt-bridge"
path = "src/main.rs"

[profile.release]
strip="symbols"
panic="abort"
lto="thin"
opt-level="s"
