[package]
name = "i2c-mqtt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.7.1"
pretty_env_logger = "0.4"
rumqttc = "0.24.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.127"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
i2cdev = "0.6.1"
docopt = "1"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "i2c-mqtt-gateway"
path = "src/main.rs"

[profile.release]
strip="symbols"
panic="abort"
lto="thin"
opt-level="s"
